Chapter04/code/application teams/tenant1/egress/service-entries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-sql-db
  namespace: tenant1-egress
spec:
  hosts:
  - <tenant1>.database.windows.net
  location: MESH_EXTERNAL
  ports:
  - number: 1433    
    protocol: TLS
    name: sql 
  resolution: DNS    
---
